--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -1,49 +1,33 @@
 <div class="row">
-<div class"control_label span1">Active Drive</div>
 <div class="distance" style="margin-left: 50px">
-	<div class="btn-group" data-toggle="buttons-radio" id="omega-ad">
-		<button type="button" id="omega-ad-1" class="btn active">1</button>
-		<button type="button" id="omega-ad-2" class="btn">2</button>
-		<button type="button" id="omega-ad-3" class="btn">3</button>
-		<button type="button" id="omega-ad-4" class="btn">4</button>
+	<div class="row">
+		<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 	</div>
-</div>
-</div>
-<div class="row">
-<div class="input-append">
-    <input type="text" class="input-xxlarge" data-bind="value: newUrl">
-    <button class="btn btn-primary" data-bind="click: startSpliceDemo">{{ _('Go') }}</button>
-</div>
-<div class="row">
-    <button class="btn btn-primary" data-bind="click: showOmegaDialog">Show Dialog</button>
-</div>
+        <div class="row">
+        	<button class="btn btn-primary" data-bind="click: connectOmega">Connect to Omega</button>
+    	</div>
+        <div class="row" style="margin-top: 10px">
+		<div class="btn-group" data-toggle="buttons-radio" id="omega-mod-ad">
+			<button type="button" id="omega-mod-ad-1" class="btn active" value="1" data-bind="click: activeDriveTest">1</button>
+			<button type="button" id="omega-mod-ad-2" class="btn" value="2" data-bind="click: activeDriveTest">2</button>
+			<button type="button" id="omega-mod-ad-3" class="btn" data-bind="click: activeDriveTest">3</button>
+			<button type="button" id="omega-mod-ad-4" class="btn" data-bind="click: activeDriveTest">4</button>
+		</div>
+        	<button class="btn btn-primary" data-bind="click: startSingleColor">Start Single Color</button>
+    	</div>
+    	<div class="row" style="margin-top: 10px">
+	       	<button type="button" class="btn btn-primary" data-bind="click: showOmegaDialog">Show Dialog</button>
+    	</div>
 
+</div>
 </div>
 <div id="omega_dialog" class="modal hide fade large">
-    <div class="modal-body">
-    <div class="row">
-        <input type="text" class="input-large" data-bind="value: omegaPort">
-        <button class="btn btn-primary" data-bind="click: connectOmega">Connect to Omega</button>
-    </div>
-    <div class="row">
-	<div class="btn-group" data-toggle="buttons-radio" id="omega-mod-ad">
-		<button type="button" id="omega-mod-ad-1" class="btn active" value="1" data-bind="click: activeDriveTest">1</button>
-		<button type="button" id="omega-mod-ad-2" class="btn" value="2" data-bind="click: activeDriveTest">2</button>
-		<button type="button" id="omega-mod-ad-3" class="btn" data-bind="click: activeDriveTest">3</button>
-		<button type="button" id="omega-mod-ad-4" class="btn" data-bind="click: activeDriveTest">4</button>
-	</div>
-        <button class="btn btn-primary" data-bind="click: startSingleColor">Start Single Color</button>
-    </div>
-    <div class="row">
-        <span class="span4">Loading...</span>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-bind="click: sendPrintStart">Start</button>
-    </div>
-    <div class="row">
-        <input type="text" class="input-large" data-bind="value: omegaCommand">
-        <button type="button" class="btn btn-primary" data-bind="click: sendOmegaCmd">Send</button>
-    </div>
-
+    <div class="modal-body" style="margin-left: 50px">
+    	<div class="row" style="padding-left: 20px">
+        	<h3>Omega Print Info</h3>
+    	</div>
+       	<span class="span4">Splices: <span data-bind="text: currentSplice">0</span>/<span data-bind="text: nSplices">100</span></span>
+       	<span id="loading-span" class="span4 hide">Loading Drive <span data-bind="text: loadingDrive">1</span> with <span data-bind="text: loadingColor">Green</span></span>
+       	<span id="ponging-span" class="span4 hide">Ponging</span>
     </div>
 </div>
