--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -35,7 +35,8 @@
 		<div class="checkbox">
 			<label><input type="checkbox" data-bind="checked: jogWithOutgoing">With Outgoing</label>
 		</div>
-		<button class="btn btn-primary" data-bind="click: sendJogCmd">Jog</button>	
+		<button class="btn btn-primary" data-bind="click: sendJogCmd">Jog</button>
+		<button class="btn btn-danger" data-bind="click: sendStopIndefJogCmd">Stop</button>	
 
 	</div>
     	<div class="row" style="margin-top: 10px">
