Add splice demo ui, align input and submit boxes

--- a/omega/static/css/omega.css
+++ b/omega/static/css/omega.css
@@ -1,6 +1,4 @@
 /*Stop Button*/
-.btn-stop { 
-    color: #ffffff; 
-    background-color: #C92626; 
-    border-color: #940505; 
-  } 
+select, input[type="text"] {
+    margin-bottom: 0;
+}
