--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -1,75 +1,74 @@
 <div class="row">
 	<div class="distance" style="margin-left: 50px">
-		<div class="row">
-			<h4>Palette 2i Status</h4>
-			<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
-		</div>
-		<div data-bind="if: !settings.settings.plugins.omega.autoconnect()" class="row">
-			<button class="btn btn-primary" data-bind="click: connectOmega">Connect to Omega</button>
-			<button type="button" class="btn btn-primary" data-bind="click: disconnectPalette2, enable: connected">Disconnect</button>
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<button class="btn btn-primary" data-bind="click: sendFilamentLoaded, enable: connected">Send Loaded</button>	
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<div class="btn-group" data-toggle="buttons-radio" id="omega-mod-ad">
-				<button type="button" id="omega-mod-ad-1" class="btn active" value="1" data-bind="click: activeDriveTest, enable: connected">1</button>
-				<button type="button" id="omega-mod-ad-2" class="btn" value="2" data-bind="click: activeDriveTest, enable: connected">2</button>
-				<button type="button" id="omega-mod-ad-3" class="btn" data-bind="click: activeDriveTest, enable: connected">3</button>
-				<button type="button" id="omega-mod-ad-4" class="btn" data-bind="click: activeDriveTest, enable: connected">4</button>
+			<div class="row">
+				<h4>Palette 2i Status</h4>
+				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 			</div>
-			<button class="btn btn-primary" data-bind="click: startSingleColor, enable: connected">Start Single Color</button>
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<button type="button" class="btn btn-primary" data-bind="click: showOmegaDialog, enable: connected">Show Dialog</button>
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<button type="button" class="btn btn-primary" data-bind="click: sendCancelCmd, enable: connected">Cancel Print</button>
-		</div>
-		<hr>
-		<div class="row">
-			<h4>Manual Controls</h4>
-			<p>Jog Drive:</p>
-			<select data-bind="options: jogDrives, value: selectedJogDriveObs , enable: connected"></select>
-			<select data-bind="options: jogDists, value: selectedJogDistance, optionsText: 'distance', optionsValue: 'dvalue', enable: connected"></select>
-			<div class="checkbox">
-				<label><input type="checkbox" data-bind="checked: jogWithOutgoing, enable: connected">With Outgoing</label>
+			<div data-bind="if: !settings.settings.plugins.omega.autoconnect()" class="row">
+				<button class="btn btn-primary" data-bind="click: connectOmega">Connect to Omega</button>
+				<button type="button" class="btn btn-primary" data-bind="click: disconnectPalette2, enable: connected">Disconnect</button>
 			</div>
-			<button class="btn btn-primary" data-bind="click: sendJogCmd">Jog</button>
-			<button class="btn btn-danger" data-bind="click: sendStopIndefJogCmd, enable: connected">Stop</button>	
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<button type="button" class="btn btn-primary" data-bind="click: sendCutCmd, enable: connected">Cut</button>
-			<button type="button" class="btn btn-primary" data-bind="click: sendClearOutCmd, enable: connected">Clear Outgoing</button>
-		</div>
-		<div class="row" style="margin-top: 10px">
-			<input type="text" data-bind="value: omegaCommand, enable: connected">
-			<button class="btn btn-primary" data-bind="click: sendOmegaCmd, enable: connected">Send Command</button>	
-		</div>
-		<hr>
-		<div class="row">
-			<h4> Splice Demo </h4>
-			<p> Demo file: </p>
-			<select data-bind="options: filterDemoFiles, value: selectedDemoFile"></select>
-			<button type="button" class="btn btn-success" data-bind="click: startSpliceDemo"> Start Demo </button>
-			<div class="checkbox">
-				<label><input type="checkbox" data-bind="checked: demoWithPrinter">With Printer</label>
+			<div class="row" style="margin-top: 10px">
+				<button class="btn btn-primary" data-bind="click: sendFilamentLoaded, enable: connected">Send Loaded</button>	
 			</div>
-		</div>
+			<div class="row" style="margin-top: 10px">
+				<div class="btn-group" data-toggle="buttons-radio" id="omega-mod-ad">
+					<button type="button" id="omega-mod-ad-1" class="btn active" value="1" data-bind="click: activeDriveTest, enable: connected">1</button>
+					<button type="button" id="omega-mod-ad-2" class="btn" value="2" data-bind="click: activeDriveTest, enable: connected">2</button>
+					<button type="button" id="omega-mod-ad-3" class="btn" data-bind="click: activeDriveTest, enable: connected">3</button>
+					<button type="button" id="omega-mod-ad-4" class="btn" data-bind="click: activeDriveTest, enable: connected">4</button>
+				</div>
+				<button class="btn btn-primary" data-bind="click: startSingleColor, enable: connected">Start Single Color</button>
+			</div>
+			<div class="row" style="margin-top: 10px">
+				<button type="button" class="btn btn-primary" data-bind="click: showOmegaDialog, enable: connected">Show Dialog</button>
+			</div>
+			<div class="row" style="margin-top: 10px">
+				<button type="button" class="btn btn-primary" data-bind="click: sendCancelCmd, enable: connected">Cancel Print</button>
+			</div>
 		<hr>
 			<div class="row">
-				<h4> Splice Tunning </h4>
-				<div class="row" style="margin-top: 10px">
-					<button type="button" class="btn btn-success" data-bind="click: startSpliceDemo, enable: connected"> Start Splice Tunning </button>
+				<h4>Manual Controls</h4>
+				<p>Jog Drive:</p>
+				<select data-bind="options: jogDrives, value: selectedJogDriveObs , enable: connected"></select>
+				<select data-bind="options: jogDists, value: selectedJogDistance, optionsText: 'distance', optionsValue: 'dvalue', enable: connected"></select>
+				<div class="checkbox">
+					<label><input type="checkbox" data-bind="checked: jogWithOutgoing, enable: connected">With Outgoing</label>
 				</div>
-				<div class="row" style="margin-top: 10px">
-					<button type="button" class="btn btn-success" data-bind="click: startSpliceDemo, enable: connected"> Load Drives </button>
-				</div>
-				<div class="row" style="margin-top: 10px">
-					<button type="button" class="btn btn-success" data-bind="click: startSpliceDemo, enable: connected"> Splice </button>
+				<button class="btn btn-primary" data-bind="click: sendJogCmd">Jog</button>
+				<button class="btn btn-danger" data-bind="click: sendStopIndefJogCmd, enable: connected">Stop</button>	
+			</div>
+			<div class="row" style="margin-top: 10px">
+				<button type="button" class="btn btn-primary" data-bind="click: sendCutCmd, enable: connected">Cut</button>
+				<button type="button" class="btn btn-primary" data-bind="click: sendClearOutCmd, enable: connected">Clear Outgoing</button>
+			</div>
+			<div class="row" style="margin-top: 10px">
+				<input type="text" data-bind="value: omegaCommand, enable: connected">
+				<button class="btn btn-primary" data-bind="click: sendOmegaCmd, enable: connected">Send Command</button>	
+			</div>
+		<hr>
+			<div class="row">
+				<h4> Splice Demo </h4>
+				<p> Demo file: </p>
+				<select data-bind="options: filterDemoFiles, value: selectedDemoFile"></select>
+				<button type="button" class="btn btn-success" data-bind="click: startSpliceDemo"> Start Demo </button>
+				<div class="checkbox">
+					<label><input type="checkbox" data-bind="checked: demoWithPrinter">With Printer</label>
 				</div>
 			</div>
-		</div>
+		<hr>
+			<div class="row">
+				<h4> Wifi </h4>
+				<div class="row" style="margin-top: 10px">
+					<input type="text" data-bind="value: wifiSSID">
+				</div>
+				<div class="row" style="margin-top: 10px">
+					<input type="text" data-bind="value: wifiPASS">
+				</div>
+				<div class="row" style="margin-top: 10px">
+					<button class="btn btn-primary" data-bind="click: connectWifi, enable: connected">Connect</button>	
+				</div>
+			</div>
 	</div>
 </div>
 
