--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -66,7 +66,7 @@
 					<input type="text" data-bind="value: wifiPASS">
 				</div>
 				<div class="row" style="margin-top: 10px">
-					<button class="btn btn-primary" data-bind="click: connectWifi, enable: connected">Connect</button>	
+					<button class="btn btn-primary" data-bind="click: connectWifi">Connect</button>	
 				</div>
 			</div>
 	</div>
