--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -59,13 +59,11 @@
 		<hr>
 			<div class="row">
 				<h4> Wifi </h4>
-				<div class="row" style="margin-top: 10px">
-					<input type="text" data-bind="value: wifiSSID">
-				</div>
-				<div class="row" style="margin-top: 10px">
+				<input type="text" data-bind="value: wifiSSID">
+				<div class="row">
 					<input type="text" data-bind="value: wifiPASS">
 				</div>
-				<div class="row" style="margin-top: 10px">
+				<div class="row">
 					<button class="btn btn-primary" data-bind="click: connectWifi">Connect</button>	
 				</div>
 			</div>
