--- a/omega/templates/omega_tab.jinja2
+++ b/omega/templates/omega_tab.jinja2
@@ -61,7 +61,7 @@
 				<h4> Wifi </h4>
 				<input type="text" data-bind="value: wifiSSID">
 			</div>
-			<div class="row">
+			<div class="row" style="margin-top: 10px">
 				<input type="text" data-bind="value: wifiPASS">
 				<button class="btn btn-primary" data-bind="click: connectWifi">Connect</button>
 			</div>
