Fix some broken references to the plugin

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -2,7 +2,7 @@
     <div class="control-group">
         <label class="control-label">{{ _('Auto Connect') }}</label>
         <div class="controls">
-            <input type="checkbox" data-bind="checked: settings.plugins.omega.autoconnect">
+            <input type="checkbox" data-bind="checked: settings.plugins.palette2.autoconnect">
         </div>
     </div>
 </form>
