--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -4,8 +4,8 @@
 				<h4>Palette 2i Status</h4>
 				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 			</div>
-			<div data-bind="if: !settings.settings.plugins.omega.autoconnect()" class="row">
-				<button class="btn btn-primary" data-bind="click: connectOmega">Connect to Omega</button>
+			<div data-bind="if: !settings.settings.plugins.palette2.autoconnect()" class="row">
+				<button class="btn btn-primary" data-bind="click: connectOmega">Connect to Palette 2</button>
 				<button type="button" class="btn btn-primary" data-bind="click: disconnectPalette2, enable: connected">Disconnect</button>
 			</div>
 			<div class="row" style="margin-top: 10px">
