--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="distance" style="margin-left: 50px">
 			<div class="row">
-				<h4>Palette 2i Status</h4>
+				<h4>Palette 2i Status TEST</h4>
 				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 			</div>
 			<div data-bind="if: !settings.settings.plugins.palette2.autoconnect()" class="row">
