set up backend prep for sending down more UI info, removed time elapsed because redundant, basic styling for status started

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -16,16 +16,12 @@
 				<h4 class="palette-status">Status</h4>
 				<ul class="status-container">
 					<li class="single-status splice-amount">
-						<h5>Splices: </h5>
-						<span>-</span>
-					</li>
-					<li class="single-status time-elapsed">
-						<h5>Time Elapsed: </h5>
-						<span>-</span>
+						<h5 class="single-status-title">Splices: </h5>
+						<span class="single-status-value">-</span>
 					</li>
 					<li class="single-status filament-used">
-						<h5>Filament Used: </h5>
-						<span>-</span>
+						<h5 class="single-status-title">Filament Used: </h5>
+						<span class="single-status-value">-</span>
 					</li>
 				</ul>
 			</div>
