detection of important p2 events setup, status indicators setup

--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -21,8 +21,15 @@ input[type="text"] {
   display: flex;
   align-content: center;
 
+  &-title {
+    margin-right: 10px;
+  }
+
   span {
-    margin-left: 10px;
     align-self: center;
+  }
+
+  .total-splices {
+    white-space: pre;
   }
 }
