--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="distance" style="margin-left: 50px">
 			<div class="row">
-				<h4>Palette 2 Status</h4>
+				<h4>Palette 2</h4>
 				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 				<div data-bind="if: !settings.settings.plugins.palette2.autoconnect()" style="margin-top: 20px">
 					<button class="btn btn-primary connect-palette-button" data-bind="click: connectOmega">Connect</button>
@@ -16,8 +16,9 @@
 				<h4 class="palette-status">Status</h4>
 				<ul class="status-container">
 					<li class="single-status splice-amount">
-						<h5 class="single-status-title">Splices: </h5>
-						<span class="single-status-value">-</span>
+						<h5 class="single-status-title">Current Splice: </h5>
+						<span class="single-status-value current-splice"></span>
+						<span class="single-status-value total-splices">-</span>
 					</li>
 					<li class="single-status filament-used">
 						<h5 class="single-status-title">Filament Used: </h5>
@@ -52,20 +53,5 @@
 </div>
 
 <div id="omega_dialog" class="modal hide fade large">
-    <div class="modal-body" style="margin-left: 50px">
-    	<div class="row" style="padding-left: 20px">
-			<h3>Omega Print Info</h3>
-		</div>
-		<span class="span4">Splices: <span data-bind="text: currentSplice">0</span>/<span data-bind="text: nSplices">100</span></span>
-		<span id="loading-span" class="span4 hide">Loading Drive <span data-bind="text: loadingDrive">1</span> with <span data-bind="text: loadingColor">Green</span></span>
-		<span id="ponging-span" class="span4 hide">Ponging</span>
-		<div class="row">
-			<div class="row" style="margin-top: 10px">
-				<button class="btn btn-primary" data-bind="click: sendFilamentLoaded">Send Loaded</button>
-			</div>
-			<div class="row" style="margin-top: 10px">
-				<button type="button" class="btn btn-primary" data-bind="click: sendCancelCmd">Cancel Print</button>
-			</div>
-		</div>
-    </div>
+    <div>Follow the instructions on your Palette</div>
 </div>
