popups and alerts have been added to help guide users along a multi-material print

--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -33,3 +33,12 @@ input[type="text"] {
     white-space: pre;
   }
 }
+
+.current-status {
+  font-weight: 400;
+  font-style: italic;
+
+  &.completed {
+    color: green;
+  }
+}
