--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -12,8 +12,9 @@
 				</div>
 			</div>
 			<hr>
-			<div class="row">
-				<h4 class="palette-status">Status</h4>
+			<div class="row palette-status">
+				<h4 class="palette-status-title">Status</h4>
+				<h5 class="current-status">No Ongoing Multi-Material Print Detected</h5>
 				<ul class="status-container">
 					<li class="single-status splice-amount">
 						<h5 class="single-status-title">Current Splice: </h5>
