--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -1,8 +1,13 @@
-<form class="form-horizontal">
-    <div class="control-group">
-        <label class="control-label">{{ _('Auto Connect') }}</label>
-        <div class="controls">
-            <input type="checkbox" data-bind="checked: settings.plugins.palette2.autoconnect">
-        </div>
-    </div>
-</form>
+<div>
+  <h4>Palette 2 Settings</h4>
+  <div class="checkbox theme-input-label">
+    <label>
+      <span>Auto Connect To Palette 2</span>
+      <input class="autoconnect-input" type="checkbox" data-bind="checked: settings.plugins.palette2.autoconnect">
+    </label>
+    <label>
+      <span>Display Palette 2 Alerts</span>
+      <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.palette2Alerts">
+    </label>
+  </div>
+</div>
