revised text on alerts

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -11,7 +11,7 @@
 			<hr>
 			<div class="row palette-status">
 				<h4 class="palette-status-title">Status</h4>
-				<h5 class="current-status">No Ongoing Multi-Material Print Detected</h5>
+				<h5 class="current-status">No ongoing Palette 2 print</h5>
 				<ul class="status-container">
 					<li class="single-status splice-amount">
 						<h5 class="single-status-title">Current Splice: </h5>
