added optional serial port selection for Palette 2 functionality

--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -47,6 +47,26 @@ input[type="text"] {
   animation: highlight-border 1.5s 10;
 }
 
+.serial-ports {
+  h6 {
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: 400;
+    margin: 0;
+    transition: 0.3s;
+  }
+}
+
+.serial-ports-list {
+  display: none;
+  width: 255px;
+  margin: 7px 0 5px;
+}
+
+.p2-connect-buttons {
+  margin-top: 5px;
+}
+
 @keyframes highlight {
   0% {
     background: #ffff99;
