--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -4,8 +4,14 @@
 				<h4>Palette 2</h4>
 				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 				<div style="margin-top: 20px">
-					<button class="btn btn-primary connect-palette-button" data-bind="click: connectOmega">Connect</button>
-					<button type="button" class="btn btn-primary" data-bind="click: disconnectPalette2, enable: connected">Disconnect</button>
+					<div class="serial-ports">
+						<h6 data-bind="click: displayPorts">Select Serial Port</h6>
+						<select class="serial-ports-list" data-bind="options: ports, value: selectedPort"></select>
+					</div>
+					<div class="p2-connect-buttons">
+						<button class="btn btn-primary connect-palette-button" data-bind="click: connectOmega">Connect</button>
+						<button type="button" class="btn btn-primary" data-bind="click: disconnectPalette2, enable: connected">Disconnect</button>
+					</div>
 				</div>
 			</div>
 			<hr>
