integrated auto-connect with new port selection functionality

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -6,7 +6,7 @@
 				<div style="margin-top: 20px">
 					<div class="serial-ports">
 						<h6 data-bind="click: displayPorts">Select Serial Port</h6>
-						<select class="serial-ports-list" data-bind="options: ports, value: selectedPort"></select>
+						<select class="serial-ports-list" data-bind="options: ports, value: selectedPort, disable: connected"></select>
 					</div>
 					<div class="p2-connect-buttons">
 						<button class="btn btn-primary connect-palette-button" data-bind="click: connectOmega">Connect</button>
