revisited logic for connect

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -5,7 +5,7 @@
 				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg">Not Connected</span></p>
 				<div style="margin-top: 20px">
 					<div class="serial-ports">
-						<h6 data-bind="click: displayPorts">Select Serial Port</h6>
+						<h6 data-bind="click: displayPorts">Manually Select Port</h6>
 						<select class="serial-ports-list" data-bind="options: ports, value: selectedPort, disable: connected"></select>
 					</div>
 					<div class="p2-connect-buttons">
