--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -15,6 +15,7 @@ input[type="text"] {
 .status-container {
   list-style: none;
   margin: 0;
+  margin-left: -5px;
 }
 
 .single-status {
@@ -32,6 +33,11 @@ input[type="text"] {
   .total-splices {
     white-space: pre;
   }
+}
+
+.splice-amount,
+.filament-used {
+  margin-left: 5px;
 }
 
 .current-status {
@@ -79,9 +85,11 @@ input[type="text"] {
 .ping-overview,
 .pong-overview {
   display: flex;
+  padding-left: 5px;
   &:hover {
     cursor: pointer;
     background-color: whitesmoke;
+    border-radius: 5px;
   }
 
   .click-arrow {
@@ -108,12 +116,13 @@ input[type="text"] {
 .ping-history,
 .pong-history {
   display: none;
+  max-height: 306px;
+  overflow: scroll;
   background-color: #fcfcfc;
   border-radius: 1px;
   border: 1px solid rgba(54, 54, 54, 1);
-  padding: 10px;
-  margin-left: 0;
-  margin-right: 55%;
+  padding: 3px 15px;
+  margin: 5px 55% 5px 5px;
   list-style: none;
 
   .single-ping,
@@ -136,6 +145,12 @@ input[type="text"] {
       border-bottom: none;
     }
   }
+}
+
+.loading-overlay-message {
+  color: white;
+  font-size: 16px;
+  text-align: center;
 }
 
 @keyframes highlight {
