--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -100,10 +100,7 @@ input[type="text"] {
 }
 
 .current-ping,
-.current-pong {
-  align-self: flex-end;
-}
-
+.current-pong,
 .current-ping-percentage,
 .current-pong-percentage {
   align-self: flex-end;
