changed wording for alert disabling option and fixed logic for heartbeat check on FE

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -6,7 +6,7 @@
       <input class="autoconnect-input" type="checkbox" data-bind="checked: settings.plugins.palette2.autoconnect">
     </label>
     <label>
-      <span>Display Palette 2 Alerts</span>
+      <span>Display Palette 2 Setup Alerts</span>
       <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.palette2Alerts">
     </label>
   </div>
